<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/iv_icon_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        tools:ignore="MissingConstraints" />

    /* Título */

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_autonomia"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_icon_back"
        app:layout_constraintTop_toTopOf="parent" />

    /* EditText */

    <EditText
        android:id="@+id/et_preco_kwh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/preco_kwh"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/km_percorrido"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_preco_kwh" />

    /* Botão Calcular */

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintTop_toBottomOf="@+id/et_km_percorrido" />

    /* View resultado */

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btn_calcular"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular" />

</androidx.constraintlayout.widget.ConstraintLayout>